test/classes/initializers/parentCall/inOnCobegin.good
inOnCobegin.chpl:4: In initializer:
inOnCobegin.chpl:8: error: use of this.initDone() call in a parallel statement
